--- a/decidim_app-design/app/views/public/index.html.erb
+++ b/decidim_app-design/app/views/public/index.html.erb
@@ -277,6 +277,7 @@
             <li><%= link_to "Vote encrypting", page_path("evote-encrypting") %></li>
             <li><%= link_to "Confirmed vote", page_path("evote-confirmed") %></li>
             <li><%= link_to "Verify vote", page_path("evote-verify") %></li>
+            <li><%= link_to "Verify vote from landing page", page_path("evote-public-verify") %></li>
          </ul>
         </div>
       </div>
