--- a/decidim-meetings/app/views/decidim/meetings/registration_mailer/confirmation.html.erb
+++ b/decidim-meetings/app/views/decidim/meetings/registration_mailer/confirmation.html.erb
@@ -1,6 +1,6 @@
 <p><%= t(".confirmed_html", title: present(@meeting).title, url: @locator.url) %></p>
 
-<% if registration.meeting.component.settings.registration_code_enabled %>
+<% if @registration.meeting.component.settings.registration_code_enabled %>
   <p><%= t(".registration_code", code: @registration.code) %></p>
 <% end %>
 
