Fix ERBLint issue with comments index.js.erb

--- a/decidim-comments/app/views/decidim/comments/comments/index.js.erb
+++ b/decidim-comments/app/views/decidim/comments/comments/index.js.erb
@@ -10,7 +10,7 @@
   var inReplyTo = <%== (reply?(comment) ? comment.commentable.id : nil).to_json %>;
 
   var $comment = $("#comment_" + commentId);
-  if ($comment.length < 1) {
+  if (1 > $comment.length) {
     if (inReplyTo) {
       component.addReply(inReplyTo, commentHtml);
     } else {
