First try -fix issue #6545 (bottom margin card title); not sure it works.

--- a/decidim-core/app/assets/stylesheets/decidim/modules/_cards.scss
+++ b/decidim-core/app/assets/stylesheets/decidim/modules/_cards.scss
@@ -255,10 +255,14 @@ a .card__title{
 
 .card__author{
   margin-bottom: .5rem;
+  margin-top: .5rem;
+
 
   // Hack when there's a toggler list
   [data-toggler]{
     margin-bottom: -.5rem;
+    margin-top: -.5rem;
+
   }
 
   &.inline-block{
