Only display flag modal if the user is signed in

--- a/decidim-comments/app/cells/decidim/comments/comment/utilities.erb
+++ b/decidim-comments/app/cells/decidim/comments/comment/utilities.erb
@@ -8,4 +8,6 @@
   <%= icon "link-intact", class: "icon--small", role: "none presentation" %>
 <% end %>
 
-<%= cell("decidim/flag_modal", model, modal_id: "flagModalComment#{model.id}") %>
+<% if current_user.present? %>
+  <%= cell("decidim/flag_modal", model, modal_id: "flagModalComment#{model.id}") %>
+<% end %>
