--- a/decidim-proposals/app/views/decidim/proposals/proposals/_edit_form_fields.html.erb
+++ b/decidim-proposals/app/views/decidim/proposals/proposals/_edit_form_fields.html.erb
@@ -88,8 +88,24 @@
   <fieldset>
     <legend><%= t("attachment_legend", scope: "decidim.proposals.proposals.edit") %></legend>
 
+    <% if @form.documents.any? %>
+      <% @form.documents.each do |document| %>
+        <div class="callout" data-closable>
+          <%= link_to translated_attribute(document.title), document.url %>
+          <small><%= document.file_type %> <%= number_to_human_size(document.file_size) %></small>
+          <%= form.hidden_field :documents, multiple: true, value: document.id, id: "document-#{document.id}" %>
+          <button class="close-button"
+                  aria-label="<%= t("delete_document", scope: "decidim.proposals.proposals.edit") %>"
+                  title="<%= t("delete_document", scope: "decidim.proposals.proposals.edit") %>"
+                  type="button" data-close>
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+      <% end %>
+    <% end %>
+
     <div class="row column">
-      <%= form.file_field :add_files, multiple: true, label: t("add_images", scope: "decidim.proposals.proposals.edit") %>
+      <%= form.file_field :add_documents, multiple: true, label: t("add_documents", scope: "decidim.proposals.proposals.edit") %>
     </div>
   </fieldset>
 <% end %>
