--- a/decidim-core/app/assets/stylesheets/decidim/modules/_cards.scss
+++ b/decidim-core/app/assets/stylesheets/decidim/modules/_cards.scss
@@ -77,6 +77,7 @@ $datetime-bg: var(--primary);
 
 .card__title{
   @extend .heading5;
+  margin-bottom: 5px; //Added to try and fix bug #6545
 }
 
 a.card__title,
