--- a/decidim-meetings/app/views/decidim/meetings/meetings/_form.html.erb
+++ b/decidim-meetings/app/views/decidim/meetings/meetings/_form.html.erb
@@ -13,12 +13,12 @@
                   { multiple: false } %>
 </div>
 
-<div class="field" id="address">
+<div class="field" data-meeting-type="in_person">
   <%= form.geocoding_field :address %>
   <p class="help-text"><%= t(".address_help") %></p>
 </div>
 
-<div class="field" id="location">
+<div class="field" data-meeting-type="in_person">
   <%= form.text_area :location %>
   <p class="help-text"><%= t(".location_help") %></p>
 </div>
@@ -28,7 +28,7 @@
   <p class="help-text"><%= t(".location_hints_help") %></p>
 </div>
 
-<div class="row column" id="meeting_online_meeting_url">
+<div class="field" data-meeting-type="online">
   <%= form.text_field :online_meeting_url %>
   <p class="help-text"><%= t(".online_meeting_url_help") %></p>
 </div>
