Add spinner to block page while ajax petition is executed

--- a/decidim-core/app/assets/stylesheets/decidim/modules/_loading-spinner.scss
+++ b/decidim-core/app/assets/stylesheets/decidim/modules/_loading-spinner.scss
@@ -10,3 +10,21 @@
     vertical-align: middle;
   }
 }
+
+.spinner-container{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba($white, .8);
+  z-index: 1;
+
+  & > .loading-spinner.full-screen-spinner{
+    top: 50%;
+    left: 50%;
+    position: absolute;
+    margin-right: -50% !important;
+    transform: translate(-50%, -50%) !important;
+  }
+}
