--- a/decidim-demographics/app/views/decidim/demographics/directory/demographics/_form.html.erb
+++ b/decidim-demographics/app/views/decidim/demographics/directory/demographics/_form.html.erb
@@ -1,11 +1,10 @@
 <div class="field">
   <%= form.collection_select(
           :gender,
-          Decidim::Demographics::Demographics::AVAILABLE_GENDERS,
+          Decidim::Demographics::Demographic::AVAILABLE_GENDERS,
           :to_s,
           ->(gender) { t(".genders.#{gender}") },
-          prompt: t(".gender_prompt"),
-          selected: @demographic_data["gender"]
+          prompt: t(".gender_prompt")
       ) %>
   <p class="help-text"><%= t ".gender_help" %></p>
 </div>
@@ -13,9 +12,8 @@
 <div class="field">
   <%= form.select(
           :age,
-          Decidim::Demographics::Demographics::AGE_GROUPS,
-          prompt: t(".age_prompt"),
-          selected: @demographic_data["age"]
+          Decidim::Demographics::Demographic::AGE_GROUPS,
+          prompt: t(".age_prompt")
       ) %>
   <p class="help-text"><%= t ".age_help" %></p>
 </div>
@@ -23,30 +21,28 @@
 <div class="field">
   <%= form.select(
           :nationalities,
-          Decidim::Demographics::Demographics::MEMBER_STATES.map{|t| t(".nationalities.#{t}")}, {selected: @demographic_data["nationalities"]},
-          { multiple:true, size: 28, prompt: t(".nationality_prompt") }
+          Decidim::Demographics::Demographic::MEMBER_STATES.map { |t| t(".nationalities.#{t}") },
+          {},
+          { multiple: true, size: 28, prompt: t(".nationality_prompt") }
       ) %>
-  <p class="help-text"><%= t ".nationalities_help" %></p>      
+  <p class="help-text"><%= t ".nationalities_help" %></p>
 </div>
 
 <div class="field">
-  <%= form.text_field :postal_code, value:  @demographic_data["postal_code"] %>
+  <%= form.text_field :postal_code %>
 </div>
 
 <div class="field">
   <%= form.select(
           :background,
-          Decidim::Demographics::Demographics::PROFESSIONAL_CATEGORIES,
-          selected: @demographic_data["background"]
+          Decidim::Demographics::Demographic::PROFESSIONAL_CATEGORIES
       ) %>
 </div>
 
-<%#= form.hidden_field :handler_name %>
-
 <script type="text/javascript">
-    $(document).ready(function() {
+    $(document).ready(function () {
         var last_valid_selection = null;
-        $('#authorization_handler_nationality').change(function(event) {
+        $('#demographic_nationalities').change(function (event) {
             if ($(this).val().length > 3) {
                 $(this).val(last_valid_selection);
             } else {
