--- a/decidim-meetings/app/views/decidim/meetings/meetings/_form.html.erb
+++ b/decidim-meetings/app/views/decidim/meetings/meetings/_form.html.erb
@@ -6,12 +6,14 @@
   <%= text_editor_for(form, :description, hashtaggable: true) %>
 </div>
 
-<div class="field">
-  <%= form.select :type_of_meeting,
-                  @form.type_of_meeting_select,
-                  { include_blank: t(".select_a_meeting_type") },
-                  { multiple: false } %>
-</div>
+<% if current_component.settings.allow_online_meetings? %>
+  <div class="field">
+    <%= form.select :type_of_meeting,
+                    @form.type_of_meeting_select,
+                    { include_blank: t(".select_a_meeting_type") },
+                    { multiple: false } %>
+  </div>
+<% end %>
 
 <div class="field" data-meeting-type="in_person">
   <%= form.geocoding_field :address %>
@@ -28,10 +30,12 @@
   <p class="help-text"><%= t(".location_hints_help") %></p>
 </div>
 
-<div class="field" data-meeting-type="online">
-  <%= form.text_field :online_meeting_url %>
-  <p class="help-text"><%= t(".online_meeting_url_help") %></p>
-</div>
+<% if current_component.settings.allow_online_meetings? %>
+  <div class="field" data-meeting-type="online">
+    <%= form.text_field :online_meeting_url %>
+    <p class="help-text"><%= t(".online_meeting_url_help") %></p>
+  </div>
+<% end %>
 
 <div class="field">
   <%= form.datetime_field :start_time %>
