--- a/decidim-meetings/app/cells/decidim/meetings/meeting_m/address.erb
+++ b/decidim-meetings/app/cells/decidim/meetings/meeting_m/address.erb
@@ -1,1 +1,19 @@
-<%= cell "decidim/address", model %>
+<% if online_meeting? %>
+  <div class="card__icondata">
+    <ul class="card-data">
+      <li class="card-data__item">
+        <%= icon "globe", class: "icon--big", role: "img", "aria-hidden": true %>
+      </li>
+      <li class="card-data__item">
+        <div class="text-left">
+          <div class="card__icondata--address">
+            <span><%= link_to(model.online_meeting_url, model.online_meeting_url, target: "_blank") %></span><br>
+            <span><%= translated_attribute model.location_hints %></span>
+          </div>
+        </div>
+      </li>
+    </ul>
+  </div>
+<% else %>
+  <%= cell "decidim/address", model %>
+<% end %>
