--- a/decidim-admin/app/views/decidim/admin/officializations/index.html.erb
+++ b/decidim-admin/app/views/decidim/admin/officializations/index.html.erb
@@ -13,6 +13,7 @@
             <th><%= t(".created_at") %></th>
             <th><%= t(".status") %></th>
             <th><%= t(".badge") %></th>
+            <th>Reports</th>
             <th><%= t(".actions") %></th>
           </tr>
         </thead>
@@ -29,8 +30,12 @@
               <td><%= l user.created_at, format: :short %></td>
               <td><%= user.officialized? ? t(".officialized") : t(".not_officialized") %></td>
               <td><%= translated_attribute(user.officialized_as) %></td>
+              <td>0</td>
 
               <td class="table-list__actions">
+                <%# if user.banned? %>
+                  <%= icon "ban", class: "action-icon action-icon--disabled", role: "img" %>
+                <%# end %>
                 <% if allowed_to? :show_email, :user, user: user %>
                   <%= icon_link_to "envelope-open", show_email_officialization_path(user_id: user.id), t(".show_email"), class: "action-icon action-icon--show-email", data: { full_name: user.name, toggle: "show-email-modal" } %>
                 <% end %>
