--- a/decidim-core/app/views/decidim/profiles/show.html.erb
+++ b/decidim-core/app/views/decidim/profiles/show.html.erb
@@ -1,3 +1,11 @@
 <% add_decidim_page_title(t(@title_key, scope: "decidim.profiles.show")) %>
 
 <%= cell "decidim/profile", profile_holder, context: { content_cell: @content_cell } %>
+
+<%=
+  render partial: "decidim/shared/flag_modal", locals: {
+    reportable: profile_holder,
+    form: report_form,
+    url: decidim.report_path(sgid: profile_holder.to_sgid.to_s)
+  }
+%>
