--- a/decidim-core/app/views/decidim/user_timeline/index.html.erb
+++ b/decidim-core/app/views/decidim/user_timeline/index.html.erb
@@ -6,3 +6,11 @@
   filter: filter,
   resource_types: resource_types
 } %>
+
+<%=
+  render partial: "decidim/shared/flag_modal", locals: {
+    reportable: user,
+    form: report_form,
+    url: decidim.report_path(sgid: user.to_sgid.to_s)
+  }
+%>
