--- a/decidim-elections/app/views/decidim/elections/admin/elections/index.html.erb
+++ b/decidim-elections/app/views/decidim/elections/admin/elections/index.html.erb
@@ -39,6 +39,8 @@
 
                 <%= icon_link_to "list", election_questions_path(election), t("actions.edit_questions", scope: "decidim.elections"), class: "action-icon--edit-questions" %>
 
+                <%= icon_link_to "power-standby", url_for(action: :edit, id: election, controller: "elections"), t("actions.edit_questions", scope: "decidim.elections"), class: "action-icon--setup-election" %>
+
                 <% if allowed_to? :update, :election, election: election %>
                   <%= icon_link_to "pencil", edit_election_path(election), t("actions.edit", scope: "decidim.elections"), class: "action-icon--edit" %>
                 <% else %>
