Filter meetings by type

--- a/decidim-meetings/app/views/decidim/meetings/meetings/_filters.html.erb
+++ b/decidim-meetings/app/views/decidim/meetings/meetings/_filters.html.erb
@@ -29,4 +29,8 @@
   <% if component_settings.creation_enabled_for_participants? %>
     <%= form.check_boxes_tree :origin, filter_origin_values, legend_title: t(".origin") %>
   <% end %>
+
+  <% if component_settings.allow_online_meetings? %>
+    <%= form.check_boxes_tree :type, filter_type_values, legend_title: t(".type") %>
+  <% end %>
 <% end %>
