--- a/decidim-core/app/views/decidim/user_activities/index.html.erb
+++ b/decidim-core/app/views/decidim/user_activities/index.html.erb
@@ -9,9 +9,9 @@
 } %>
 
 <%=
-  render partial: "decidim/shared/flag_modal", locals: {
-    reportable: user,
-    form: report_form,
-    url: decidim.report_path(sgid: user.to_sgid.to_s)
+  render partial: "decidim/shared/flag_user_modal", locals: {
+      reportable: user,
+      form: report_form,
+      url: decidim.report_user_path(sgid: user.to_sgid.to_s)
   }
 %>
