--- a/decidim-admin/app/views/decidim/admin/moderations/index.html.erb
+++ b/decidim-admin/app/views/decidim/admin/moderations/index.html.erb
@@ -16,10 +16,12 @@
       <table class="table-list">
         <thead>
           <tr>
-            <th><%= t("models.moderation.fields.reportable", scope: "decidim.moderations") %></th>
+            <th><%= t("models.moderation.fields.reportable_id", scope: "decidim.moderations") %></th>
+            <th><%= t("models.moderation.fields.reportable_type", scope: "decidim.moderations") %></th>
+            <th><%= t("models.moderation.fields.report_count", scope: "decidim.moderations") %></th>
             <th><%= t("models.moderation.fields.reported_content_url", scope: "decidim.moderations") %></th>
             <th><%= t("models.moderation.fields.reports", scope: "decidim.moderations") %></th>
-            <th><%= t("models.moderation.fields.report_count", scope: "decidim.moderations") %></th>
+            <th><%= t("models.moderation.fields.created_at", scope: "decidim.moderations") %></th>
             <% if params[:hidden] %>
               <th><%= t("models.moderation.fields.hidden_at", scope: "decidim.moderations") %></th>
             <% end %>
@@ -29,8 +31,12 @@
         <tbody>
           <% moderations.each do |moderation| %>
             <tr data-id="<%= moderation.id %>">
+              <td><%= moderation.reportable.id %></td>
               <td>
                 <%= moderation.reportable.class.name.demodulize %>
+              </td>
+              <td>
+                <%= moderation.report_count %>
               </td>
               <td>
                 <%=
@@ -42,7 +48,7 @@
                 <%= safe_join(reports, ",") %>
               </td>
               <td>
-                <%= moderation.report_count %>
+                <%= l(moderation.created_at, format: :long) %>
               </td>
               <% if params[:hidden] %>
                 <td>
