--- a/decidim-admin/app/views/decidim/admin/moderations/index.html.erb
+++ b/decidim-admin/app/views/decidim/admin/moderations/index.html.erb
@@ -10,7 +10,7 @@
       </div>
     </h2>
   </div>
-
+  <%= admin_filter_selector(:moderations) %>
   <div class="card-section">
     <div class="table-scroll">
       <table class="table-list">
