--- a/decidim-initiatives/app/views/decidim/initiatives/initiatives/show.html.erb
+++ b/decidim-initiatives/app/views/decidim/initiatives/initiatives/show.html.erb
@@ -17,6 +17,12 @@ edit_link(
 
 <%= participatory_space_floating_help %>
 
+<div class="row">
+  <div class="column">
+    <%= link_to "Print", print_initiative_path %>
+  </div>
+</div>
+
 <% add_decidim_page_title(translated_attribute(current_initiative.title)) %>
 <% provide :meta_image_url, current_initiative.type.banner_image.url %>
 <div class="row">
