--- a/decidim-initiatives/app/views/decidim/initiatives/initiatives/show.html.erb
+++ b/decidim-initiatives/app/views/decidim/initiatives/initiatives/show.html.erb
@@ -19,7 +19,7 @@ edit_link(
 
 <div class="row">
   <div class="column">
-    <%= link_to "Print", print_initiative_path %>
+    <%= link_to "Print", print_initiative_path, class: "action-print" %>
   </div>
 </div>
 
