--- a/decidim-admin/app/views/decidim/admin/moderations/index.html.erb
+++ b/decidim-admin/app/views/decidim/admin/moderations/index.html.erb
@@ -83,6 +83,7 @@
           <% end %>
         </tbody>
       </table>
+      <%= paginate moderations, theme: "decidim" %>
     </div>
   </div>
 </div>
