Use `add_decidim_page_title` helper for Admin Panel

--- a/decidim-admin/app/views/layouts/decidim/admin/_title_bar.html.erb
+++ b/decidim-admin/app/views/layouts/decidim/admin/_title_bar.html.erb
@@ -4,7 +4,7 @@
     <% if current_organization.logo.present? %>
       <%= image_tag current_organization.logo.url, alt: title %>
     <% else %>
-      <%= title %>
+      <%= current_organization.name %>
     <% end %>
   <% end %>
   <div class='tool-bar'>
