--- a/decidim-participatory_processes/app/views/decidim/participatory_processes/admin/participatory_processes/index.html.erb
+++ b/decidim-participatory_processes/app/views/decidim/participatory_processes/admin/participatory_processes/index.html.erb
@@ -1,3 +1,5 @@
+<% add_decidim_page_title(t("participatory_processes", scope: "decidim.admin.titles")) %>
+
 <%= render partial: "decidim/participatory_processes/admin/shared/secondary_nav" %>
 
 <div class="card with-overflow" id="processes">
