--- a/decidim-meetings/app/views/decidim/meetings/admin/meetings/new.html.erb
+++ b/decidim-meetings/app/views/decidim/meetings/admin/meetings/new.html.erb
@@ -1,4 +1,4 @@
-<%= decidim_form_for(@form, html: { class: "form meetings_form new_meeting", :"data-online" => current_component.settings.allow_online_meetings? }) do |f| %>
+<%= decidim_form_for(@form, html: { class: "form meetings_form new_meeting" }) do |f| %>
   <%= render partial: "form", object: f, locals: { title: t(".title") } %>
 
   <div class="button--double form-general-submit">
