--- a/decidim-core/app/assets/stylesheets/decidim/modules/_cards.scss
+++ b/decidim-core/app/assets/stylesheets/decidim/modules/_cards.scss
@@ -88,9 +88,11 @@ a .card__title{
 
 .card__header{
   margin-bottom: $card-padding / 2;
-  .card__title {
-    margin-bottom: 0.5rem;
+
+  .card__title{
+    margin-bottom: .5rem;
   }
+
   &.collapse{
     margin-bottom: 0;
   }
