--- a/decidim-demographics/app/views/decidim/demographics/directory/demographics/_form.html.erb
+++ b/decidim-demographics/app/views/decidim/demographics/directory/demographics/_form.html.erb
@@ -33,7 +33,7 @@
 </div>
 
 <div class="field">
-  <%= form.select(
+  <%= form.collection_select(
           :background,
           Decidim::Demographics::Demographic::PROFESSIONAL_CATEGORIES,
           :to_s,
