--- a/decidim-demographics/app/views/decidim/demographics/directory/demographics/new.html.erb
+++ b/decidim-demographics/app/views/decidim/demographics/directory/demographics/new.html.erb
@@ -1,3 +1,4 @@
+<% content_for(:subtitle) { t("demographics", scope: "layouts.decidim.user_profile") } %>
 <div class="row">
   <div class="columns large-12">
     <div class="card__content">
