--- a/decidim-meetings/app/cells/decidim/meetings/meeting_url/show.erb
+++ b/decidim-meetings/app/cells/decidim/meetings/meeting_url/show.erb
@@ -1,7 +1,7 @@
 <div class="card__icondata">
   <ul class="card-data">
     <li class="card-data__item">
-      <%= icon "globe", class: "icon--big", role: "img", "aria-hidden": true %>
+      <%= resource_icon %>
     </li>
     <li class="card-data__item">
       <div class="text-left">
