--- a/decidim-forms/app/views/decidim/forms/admin/questionnaires/edit.html.erb
+++ b/decidim-forms/app/views/decidim/forms/admin/questionnaires/edit.html.erb
@@ -1,10 +1,8 @@
-<% templates_defined = (defined? Decidim::Templates::Admin::Concerns::Templatable) %>
-
-<% if templates_defined && choose_template? %>
+<% if templates_defined? && choose_template? %>
   <%= render partial: "decidim/templates/admin/questionnaire_templates/choose", locals: { target: questionnaire, form_title: t("decidim.forms.admin.questionnaires.edit.title") } %>
 <% else %>
   <%= decidim_form_for(@form, url: update_url, method: :put, html: { class: "form edit_questionnaire" }) do |form| %>
-    <%= render partial: "decidim/forms/admin/questionnaires/form", object: form, locals: { title: title_for_questionnaire(templates_defined) } %>
+    <%= render partial: "decidim/forms/admin/questionnaires/form", object: form, locals: { title: title_for_questionnaire(scope: I18n.current_scope) } %>
 
     <div class="button--double form-general-submit">
       <%= form.submit t(".save"), class: "button" %>
