add link to participatory space

--- a/decidim-core/app/views/decidim/reported_mailer/report.html.erb
+++ b/decidim-core/app/views/decidim/reported_mailer/report.html.erb
@@ -10,7 +10,7 @@
 <p><%= l @report.created_at, format: :short %></p>
 
 <p><b><%= t(".participatory_space") %></b></p>
-<p><%= translated_attribute @participatory_space.title %></p>
+<p><%= link_to translated_attribute(@participatory_space.title), resource_locator(@participatory_space).url %></p>
 
 <p><b><%= t(".reason") %></b></p>
 <p><%= t(@report.reason, organization_name: @participatory_space.organization.name, scope: "decidim.shared.flag_modal") %></p>
