Remove wrong `current_scope` from view

--- a/decidim-forms/app/views/decidim/forms/admin/questionnaires/edit.html.erb
+++ b/decidim-forms/app/views/decidim/forms/admin/questionnaires/edit.html.erb
@@ -2,7 +2,7 @@
   <%= render partial: "decidim/templates/admin/questionnaire_templates/choose", locals: { target: questionnaire, form_title: t("decidim.forms.admin.questionnaires.edit.title") } %>
 <% else %>
   <%= decidim_form_for(@form, url: update_url, method: :put, html: { class: "form edit_questionnaire" }) do |form| %>
-    <%= render partial: "decidim/forms/admin/questionnaires/form", object: form, locals: { title: title_for_questionnaire(scope: I18n.current_scope) } %>
+    <%= render partial: "decidim/forms/admin/questionnaires/form", object: form, locals: { title: title_for_questionnaire } %>
 
     <div class="button--double form-general-submit">
       <%= form.submit t(".save"), class: "button" %>
