Add dynamic update of the comments count

--- a/decidim-comments/app/cells/decidim/comments/comments/show.erb
+++ b/decidim-comments/app/cells/decidim/comments/comments/show.erb
@@ -6,7 +6,9 @@
           <% if single_comment? %>
             <%= t("decidim.components.comments.comment_details_title") %>
           <% else %>
-            <%= t("decidim.components.comments.title", count: comments_count) %>
+            <span class="comments-count">
+              <%= t("decidim.components.comments.title", count: comments_count) %>
+            </span>
           <% end %>
         </h2>
         <%= render :order_control %>
