--- a/decidim-comments/app/views/decidim/comments/comments/index.js.erb
+++ b/decidim-comments/app/views/decidim/comments/comments/index.js.erb
@@ -18,4 +18,7 @@
     }
   }
 <% end %>
+
+  // Update the comments count
+  $(".comments-count", $comments).text(<%== t("decidim.components.comments.title", count: @comments_count).to_json %>);
 }());
