--- a/decidim-comments/app/views/decidim/comments/comments/reload.js.erb
+++ b/decidim-comments/app/views/decidim/comments/comments/reload.js.erb
@@ -15,4 +15,7 @@
   component = new Decidim.CommentsComponent($comments, $comments.data("decidim-comments"));
   component.mountComponent();
   $comments.data("comments", component);
+
+  // Update the comments count
+  $(".comments-count", $comments).text(<%== t("decidim.components.comments.title", count: @comments_count).to_json %>);
 }());
