--- a/decidim-initiatives/app/views/decidim/initiatives/initiatives/show.html.erb
+++ b/decidim-initiatives/app/views/decidim/initiatives/initiatives/show.html.erb
@@ -17,6 +17,19 @@ edit_link(
 
 <%= participatory_space_floating_help %>
 
+<div class="row">
+  <div class="column">
+    <% if allowed_to? :send_to_technical_validation, :initiative, initiative: current_initiative %>
+      <%= link_to t(".send_to_technical_validation"),
+                  send_to_technical_validation_initiative_path(current_initiative),
+                  class: "button muted",
+                  data: { confirm: t(".confirm") } %>
+    <% elsif current_initiative.created? %>
+      <%= link_to t(".send_to_technical_validation"), "#", class: "button muted disabled" %>
+    <% end %>
+  </div>
+</div>
+
 <% add_decidim_page_title(translated_attribute(current_initiative.title)) %>
 <% provide :meta_image_url, current_initiative.type.banner_image.url %>
 <div class="row">
