--- a/decidim-core/app/cells/decidim/profile_sidebar/show.erb
+++ b/decidim-core/app/cells/decidim/profile_sidebar/show.erb
@@ -3,7 +3,10 @@
   <div class="card__content">
     <h1 class="profile--sidebar--title">
       <strong><%= profile_user.name %></strong>
-      <span class="text-small"><%= profile_user.nickname %></span>
+      <span class="text-small">
+        <%= profile_user.nickname %>
+        <%== cell("decidim/author", profile_user, from:profile_user).flag_user %>
+      </span>
       <% if can_contact_user? %>
         <span class="user-contact_link">
           <%= link_to_current_or_new_conversation_with(profile_holder) %>
