--- a/decidim-elections/app/views/decidim/elections/admin/setup/show.html.erb
+++ b/decidim-elections/app/views/decidim/elections/admin/setup/show.html.erb
@@ -1,4 +1,4 @@
-<%= decidim_form_for(@form, html: { class: "form edit_election" }) do |f| %>
+<%= decidim_form_for(@form, html: { class: "form setup_election" }) do |f| %>
   <%= render partial: "form", object: f, locals: { title: t(".title") } %>
 
   <div class="button--double form-general-submit">
