Update "send notification" method and rename report column from admin.

--- a/decidim-core/app/views/decidim/user_report_mailer/notify.html.erb
+++ b/decidim-core/app/views/decidim/user_report_mailer/notify.html.erb
@@ -1,4 +1,4 @@
-<p><%= t ".hello" %></p>
+<p><%= t ".hello", admin: h(@admin.name) %></p>
 
 <p><%= t ".body_1", user: h(@user.name), token: h(@token.name) %></p>
 
