--- a/decidim-meetings/app/views/decidim/meetings/meetings/_meetings.html.erb
+++ b/decidim-meetings/app/views/decidim/meetings/meetings/_meetings.html.erb
@@ -1,3 +1,5 @@
+<% puts "NUM MEETINGS: #{meetings.size}" %>
+<% puts "MEETINGS NAMES: #{meetings.pluck(:title)}" %>
 <% if @forced_past_meetings %>
   <div class="callout warning">
     <%= t ".upcoming_meetings_warning" %>
