Evote questions and results

--- a/decidim_app-design/app/views/public/index.html.erb
+++ b/decidim_app-design/app/views/public/index.html.erb
@@ -278,6 +278,7 @@
             <li><%= link_to "Confirmed vote", page_path("evote-confirmed") %></li>
             <li><%= link_to "Verify vote", page_path("evote-verify") %></li>
             <li><%= link_to "Verify vote from landing page", page_path("evote-public-verify") %></li>
+            <li><%= link_to "Poll results page", page_path("evote-poll-results") %></li>
          </ul>
         </div>
       </div>
