add drag cursor map (#19)

--- a/decidim-proposals/app/views/decidim/proposals/proposals/_edit_form_fields.html.erb
+++ b/decidim-proposals/app/views/decidim/proposals/proposals/_edit_form_fields.html.erb
@@ -38,7 +38,7 @@
   </div>
 
   <div class="field" id="address_input">
-    <%= form.geocoding_field :address %>
+    <%= form.geocoding_field :address, placeholder: t("decidim.proposals.proposals.placeholder.address") %>
   </div>
 <% end %>
 
