--- a/decidim-proposals/app/views/decidim/proposals/proposals/preview.html.erb
+++ b/decidim-proposals/app/views/decidim/proposals/proposals/preview.html.erb
@@ -10,13 +10,13 @@
     <% if component_settings.geocoding_enabled? %>
       <% if has_position?(@proposal) %>
         <%= render partial: "dynamic_map_instructions" %>
-        <%= dynamic_map_for proposal_preview_data_for_map(@proposal), "column" do %>
+        <%= dynamic_map_for proposal_preview_data_for_map(@proposal) do %>
           <%= stylesheet_link_tag "decidim/map" %>
           <%= javascript_include_tag "decidim/map" %>
         <% end %>
-        <%= decidim_form_for(@form, url: update_draft_proposal_path(@form), html: { method: :patch, class: "column" }) do |form| %>
-          <%= form.hidden_field :title %>
-          <%= form.hidden_field :body, rows: 10 %>
+        <%= decidim_form_for(@form, url: update_draft_proposal_path(@form), html: { method: :patch }) do |form| %>
+          <%= form.hidden_field :title, value: form_presenter.title %>
+          <%= form.hidden_field :body, value: form_presenter.body %>
           <%= form.hidden_field :address %>
           <%= form.hidden_field :latitude, data: { type: "latitude" } %>
           <%= form.hidden_field :longitude, data: { type: "longitude" } %>
