--- a/decidim-generators/lib/decidim/generators/app_templates/secrets.yml.erb
+++ b/decidim-generators/lib/decidim/generators/app_templates/secrets.yml.erb
@@ -37,7 +37,11 @@ default: &default
 <%%= ENV["BULLETIN_BOARD_IDENTIFICATION_PRIVATE_KEY"]&.indent(6) %>
     server: <%%= ENV["BULLETIN_BOARD_SERVER"] %>
     api_key: <%%= ENV["BULLETIN_BOARD_API_KEY"] %>
-
+    number_of_trustees: <%%= ENV["BULLETIN_BOARD_NUMBER_OF_TRUSTEES"] %>
+    scheme:
+      name: <%%= ENV["BULLETIN_BOARD_SCHEME_NAME"] %>
+      parameters:
+        quorum: <%%= ENV["BULLETIN_BOARD_SCHEME_QUORUM"] %>
 development:
   <<: *default
   secret_key_base: <%= SecureRandom.hex(64) %>
