Add manage committee members functionality

--- a/decidim-initiatives/app/views/decidim/initiatives/initiatives/_form.html.erb
+++ b/decidim-initiatives/app/views/decidim/initiatives/initiatives/_form.html.erb
@@ -118,5 +118,8 @@
     </div>
   </div>
 </div>
+<div class="card">
+  <%= render partial: "committee_members" %>
+</div>
 
 <%= javascript_include_tag "decidim/initiatives/scoped_type" %>
