--- a/decidim-elections/app/views/decidim/elections/admin/setup/show.html.erb
+++ b/decidim-elections/app/views/decidim/elections/admin/setup/show.html.erb
@@ -2,6 +2,6 @@
   <%= render partial: "form", object: f, locals: { title: t(".title") } %>
 
   <div class="button--double form-general-submit">
-    <%= f.submit t(".setup") %>
+    <%= f.submit t(".setup"), disabled: !@form.valid? %>
   </div>
 <% end %>
