Texts change: election instead of poll

--- a/decidim_app-design/app/views/public/evote-poll-landing.html.erb
+++ b/decidim_app-design/app/views/public/evote-poll-landing.html.erb
@@ -10,7 +10,7 @@
     <div class="row">
       <div class="columns">
         <a href="evote-poll-list">
-          <%= icon "caret-left", class: "icon--small" %>&nbsp;Available polls
+          <%= icon "caret-left", class: "icon--small" %>&nbsp;Available elections
         </a>
         <h1 class="heading3">Consulta sobre la organización del Comité de Fiestas del Barrio del Fort Pienc</h1>
         <p>
@@ -41,7 +41,7 @@
 
     <div class="row section">
       <div class="columns large-8">
-        <h2 class="section-heading">Poll questions</h2>
+        <h2 class="section-heading">Election questions</h2>
         <p>
           These are the questions you will find in the voting process:
         </p>
