--- a/decidim_app-design/app/views/public/evote-poll-results.html.erb
+++ b/decidim_app-design/app/views/public/evote-poll-results.html.erb
@@ -10,7 +10,7 @@
     <div class="row">
       <div class="columns">
         <a href="evote-poll-list">
-          <%= icon "caret-left", class: "icon--small" %>&nbsp;Available polls
+          <%= icon "caret-left", class: "icon--small" %>&nbsp;Available elections
         </a>
         <h1 class="heading3">Consulta sobre la organización del Comité de Fiestas del Barrio del Fort Pienc</h1>
         <p>
@@ -36,7 +36,7 @@
 
     <div class="row section">
       <div class="columns large-8">
-        <h2 class="section-heading">Poll results</h2>
+        <h2 class="section-heading">Election results</h2>
         <p>
           These are the results of the voting, for each question:
         </p>
