--- a/decidim_app-design/app/views/public/index.html.erb
+++ b/decidim_app-design/app/views/public/index.html.erb
@@ -267,8 +267,8 @@
         <div class="design-index__block">
           <h2 class="section-heading">eVote</h2>
           <ul>
-            <li><%= link_to "Available polls (follows current component list models)", page_path("evote-poll-list") %></li>
-            <li><%= link_to "Poll landing page", page_path("evote-poll-landing") %></li>
+            <li><%= link_to "Available elections (follows current component list models)", page_path("evote-poll-list") %></li>
+            <li><%= link_to "Election landing page", page_path("evote-poll-landing") %></li>
             <li><%= link_to "Question model 1", page_path("evote-1") %></li>
             <li><%= link_to "Question model 2 (+ more info)", page_path("evote-2") %></li>
             <li><%= link_to "Question model 3 (+ counter)", page_path("evote-3") %></li>
@@ -278,7 +278,7 @@
             <li><%= link_to "Confirmed vote", page_path("evote-confirmed") %></li>
             <li><%= link_to "Verify vote", page_path("evote-verify") %></li>
             <li><%= link_to "Verify vote from landing page", page_path("evote-public-verify") %></li>
-            <li><%= link_to "Poll results page", page_path("evote-poll-results") %></li>
+            <li><%= link_to "Election results page", page_path("evote-poll-results") %></li>
          </ul>
         </div>
       </div>
