--- a/decidim_app-design/app/views/public/partials/_focus_content_content_2.html.erb
+++ b/decidim_app-design/app/views/public/partials/_focus_content_content_2.html.erb
@@ -32,7 +32,7 @@
   <label class="evote__check evote__card">
     <input type="radio" name="programa">
     <span class="evote__check-label">
-      Indiferente / en blanco
+      Blank / None of the above
       <span class="evote__check-extra">
         <button class="link" data-toggle="show-focus-modal">more information</button>
       </span>
