style: fix lint issues

--- a/decidim-elections/app/assets/stylesheets/decidim/elections/trustee_zone.scss
+++ b/decidim-elections/app/assets/stylesheets/decidim/elections/trustee_zone.scss
@@ -1,4 +1,5 @@
-#not_supported_browser, #submit_identification_keys{
+#not_supported_browser,
+#submit_identification_keys{
   display: none;
 
   &.visible{
