Change order and color of print button

--- a/decidim-initiatives/app/views/decidim/initiatives/initiatives/edit.html.erb
+++ b/decidim-initiatives/app/views/decidim/initiatives/initiatives/edit.html.erb
@@ -15,9 +15,9 @@
         <%= decidim_form_for @form, html: { class: "form edit_initiative" } do |f| %>
           <%= render partial: "form", object: f %>
           <div class="actions">
-            <%= f.submit t("update", scope: "decidim.initiatives.edit"), class: "button expanded" if allowed_to? :update, :initiative, initiative: current_initiative %>
+            <%= link_to t("print", scope: "decidim.initiatives.admin.initiatives.edit"), print_initiative_path, class: "button light secondary expanded" %>
 
-            <%= link_to t("print", scope: "decidim.initiatives.admin.initiatives.edit"), print_initiative_path, class: "button expanded action-print" %>
+            <%= f.submit t("update", scope: "decidim.initiatives.edit"), class: "button expanded" if allowed_to? :update, :initiative, initiative: current_initiative %>
 
             <% if allowed_to? :publish, :initiative, initiative: current_initiative %>
               <%= link_to t("actions.publish", scope: "decidim.admin"),
